app/styles/main.css
/* ... */
.maintenance-author {
  color: #5f7378;
  font-size: 85%;
}
.maintenance-future {
  font-size: 90%;
}
.maintenance-future span {
  text-transform: uppercase;
  font-weight: 400;
  color: #5f7378;
  font-style: normal;
  margin-left: 0;
}
img.forgot-password {
  display: block;
  margin: 0 auto 20px auto;
  width: 250px;
}
@media only screen and (max-width: 1024px) {
  h1 {
    font-size: 230%;
  }
  h2 {
    font-size: 210%;
  }
  h1 {
    font-size: 250%;
  }
  h3 {
    font-size: 170%;
  }
  h4 {
    font-size: 130%;
  }
  p.large {
    font-size: 150%;
  }
  p.medium {
    font-size: 140%;
  }
  p.small {
    font-size: 120%;
  }
  .btn-large {
    font-size: 150%;
    height: 56px;
  }
  .btn-medium {
    font-size: 110%;
    height: 46px;
  }
  .rent-status td.name {
    min-width: 0;
  }
  .add-property {
    position: relative;
    top: 0;
    left: 0;
  }
}
@media only screen and (max-width: 768px) {
  h1 {
    font-size: 250%;
  }
  h2 {
    font-size: 220%;
  }
  p.large {
    font-size: 130%;
  }
  p.medium {
    font-size: 120%;
  }
  p.small {
    font-size: 110%;
  }
}
@media only screen and (max-width: 767px) {
  #wrapper {
    padding-left: 0;
  }
  #sidebar {
    left: -250px;
    position: fixed;
    border-radius: 0;
  }
  #sidebar.sidebar-open {
    left: 0px;
  }
  .sidebar-nav > .sidebar-brand,
  .sidebar-nav > .sidebar-brand a,
  .sidebar-nav > .sidebar-brand a:hover {
    height: 180px;
  }
  #content {
    position: relative;
    left: 0;
    padding: 0;
    height: 100%;
  }
  #content.sidebar-open {
    left: 250px;
  }
  #content,
  #sidebar {
    transition: all .15s linear;
  }
  #mobile-header {
    display: block;
    position: fixed;
    width: 100%;
    height: 60px;
    background: #3ab4ad;
    text-align: center;
    line-height: 60px;
    color: #f9f9f9;
    font-weight: 400;
    font-size: 140%;
    z-index: 1000;
  }
  #mobile-wrapper {
    padding: 30px 20px 0 20px;
  }
  #menu-toggle {
    display: inline-block;
    position: absolute;
    left: 0px;
    padding: 0px 20px;
    color: #f9f9f9;
    border: 0;
  }
  ul.properties {
    padding: 0;
    max-width: 100%;
    margin: 0;
  }
  ul.properties li {
    margin-left: 0;
  }
  #add-property {
    position: fixed;
    margin: 0 5%;
    width: 90%;
    max-width: 90%;
    top: 50px;
    left: 0;
    padding: 150px 10px 10px 10px;
    background-size: 150px auto;
    background-position: center 10px;
    background-repeat: no-repeat;
  }
  #add-property h3 {
    text-align: center;
  }
  .close-add-property {
    margin-top: 20px;
    margin-left: 0;
    text-align: center;
  }
  table.rent-status {
    width: 100%;
    min-width: 0;
    white-space: normal;
    font-size: 85%;
  }
  .rent-status td.month,
  .rent-status-header td {
    white-space: normal;
  }
  .rent-status-header td {
    font-size: 80%;
    line-height: 120%;
  }
  .rent-status td.status {
    padding: 10px 0;
  }
  .rent-status td:nth-child(2) {
    display: none;
  }
  slick button.slick-next,
  slick button.slick-prev {
    display: none !important;
  }
}
@media only screen and (max-width: 500px) {
  .col-xs-1,
  .col-sm-1,
  .col-md-1,
  .col-lg-1,
  .col-xs-2,
  .col-sm-2,
  .col-md-2,
  .col-lg-2,
  .col-xs-3,
  .col-sm-3,
  .col-md-3,
  .col-lg-3,
  .col-xs-4,
  .col-sm-4,
  .col-md-4,
  .col-lg-4,
  .col-xs-5,
  .col-sm-5,
  .col-md-5,
  .col-lg-5,
  .col-xs-6,
  .col-sm-6,
  .col-md-6,
  .col-lg-6,
  .col-xs-7,
  .col-sm-7,
  .col-md-7,
  .col-lg-7,
  .col-xs-8,
  .col-sm-8,
  .col-md-8,
  .col-lg-8,
  .col-xs-9,
  .col-sm-9,
  .col-md-9,
  .col-lg-9,
  .col-xs-10,
  .col-sm-10,
  .col-md-10,
  .col-lg-10,
  .col-xs-11,
  .col-sm-11,
  .col-md-11,
  .col-lg-11,
  .col-xs-12,
  .col-sm-12,
  .col-md-12,
  .col-lg-12 {
    padding: 0;
  }
  .centered-logo {
    display: block;
    margin: 0 auto;
    width: 120px;
  }
  h1 {
    font-size: 190%;
  }
  h2 {
    font-size: 150%;
  }
  h3 {
    font-size: 140%;
  }
  h4 {
    font-size: 110%;
  }
  p.large {
    font-size: 140%;
  }
  p.medium {
    font-size: 120%;
  }
  p.small {
    font-size: 110%;
  }
  h3.rent-title {
    font-size: 120%;
  }
  .both-names-input fieldset {
    margin-right: 10px;
  }
  .date-input fieldset:first-child,
  .date-input fieldset:nth-child(2) {
    width: 21%;
  }
  .date-input fieldset:nth-child(3) {
    width: 45%;
  }
  .btn-large {
    font-size: 120%;
    height: 46px;
  }
  .btn-medium {
    font-size: 105%;
    height: 44px;
  }
  .password-requirements .requirement {
    width: 100%;
    display: block;
  }
  .password-requirements .requirement:nth-child(even) {
    text-align: left;
  }
  table.rent-status {
    max-width: 320px;
  }
}

